--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,17 +7,14 @@ main:
   - name: Home
     url: '#about'
     weight: 10
-  - name: Posts
-    url: '#posts'
+  - name: Work Experience
+    url: '#work'
     weight: 20
-  - name: Projects
-    url: '#projects'
-    weight: 30
-  - name: Talks
-    url: '#talks'
-    weight: 40
   - name: Publications
     url: '#featured'
+    weight: 40
+  - name: Talks
+    url: '#talks'
     weight: 50
   - name: Contact
     url: '#contact'
@@ -25,6 +22,6 @@ main:
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
-#  - name: CV
-#    url: uploads/resume.pdf
-#    weight: 70
+  - name: CV
+    url: uploads/ChiapponiElisaCV.pdf
+    weight: 70
