--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -22,6 +22,6 @@ main:
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
-  - name: CV
-    url: uploads/ChiapponiElisaCV.pdf
-    weight: 70
+  #- name: CV
+  #  url: uploads/ChiapponiElisaCV.pdf
+  #  weight: 70
