--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -11,7 +11,7 @@ main:
     url: '#work'
     weight: 20
   - name: Publications
-    url: '#featured'
+    url: '#pubblications'
     weight: 40
   - name: Talks
     url: '#talks'
