--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,9 +10,9 @@ main:
   - name: Publications
     url: '#pubblications'
     weight: 20
-  - name: Talks
-    url: '#talks'
-    weight: 30
+  #- name: Talks
+  #  url: '#talks'
+  #  weight: 30
   - name: Work Experience
     url: '#work'
     weight: 40
